# rhythm4G

./: .gitignore  README.md  Rhythm4G.spec  RhythmForge.spec  build_windows.ps1  pyproject.toml  requirements.txt  run_rhythmforge.py
docs/: ARCHITECTURE.md
rhythmforge/: chart_utils.py  chartgen.py  config.py  effects.py  game.py  launcher.py  library.py  main.py
