[project]
name = "rhythmforge"
version = "0.1.0"
description = "MP3 auto-charting keyboard rhythm game MVP"
requires-python = ">=3.10"
dependencies = [
  "pygame-ce>=2.5.7",
  "librosa>=0.11.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "audioread>=3.0",
]

[project.scripts]
rhythmforge = "rhythmforge.main:main"
